# fuse

./: .gitignore  .golangci.yml  .goreleaser.yaml  CHANGELOG.md  ORCHESTRATOR_SETUP_PLAN.md  README.md  agent_profile.go  drain.go  drain_test.go  events.go  fleet.go  fleet_test.go  go.mod  go.sum  go.work  metrics.go  provider_test.go  railpack.json  reconcile_test.go  release-please-config.json  scheduler.go  scheduler_test.go  snapshots.go  snapshots_test.go  test-sdk-go.sh  test-sdk-py.sh  test-sdk-ts.sh
api/: api_keys.go  api_keys_test.go  auth.go  auth_test.go  convert.go  errors.go  handlers.go  handlers_test.go  health.go  health_test.go  metrics_middleware.go  metrics_middleware_test.go  middleware.go  openapi.yaml  request_id.go  request_id_test.go  resolver.go  sse.go  sse_test.go  types.go
cli/: apikeys_cmd.go  cli_test.go  context_cmd.go  environment_cmd.go  exec_cmd.go  forms.go  hosts_cmd.go  init_cmd.go  init_cmd_test.go  main.go  metrics_cmd.go  quickstart_cmd.go  render.go  root.go  snapshot_cmd.go  up_cmd.go  up_cmd_test.go  watch.go  watch_test.go
daytona/: client.go  client_test.go  daytona.go  daytona_test.go  e2e_grpcweb_test.go  integration_test.go
deploy/: fuse-orchestrator.service
docs/: .gitignore  AUDIT-2026-07-18.md  DECOUPLING.md  attach.md  blume.config.ts  next.config.mjs  open-next.config.ts  package-lock.json  package.json  theme.css  wrangler.jsonc
e2e/: deploy_test.go  doc.go
firecracker/: client_test.go  firecracker.go  firecracker_test.go  smoke_test.go
host-agent/: FUSE.md  README.md  fc-agent-test.sh  fc-agent.py  fc-agent.sh  fc-bake-rootfs.sh  fc-build-agent.sh  fc-deps.sh  fc-e2e.sh  fc-expose.sh  fc-install.sh  fc-postgres.sh  fc-ssh.sh  fc-up.sh  fc-update.sh  orchestrator.default  orchestrator.service  package.json  qemu-agent-test.sh  qemu-agent.py  qemu-agent.service  qemu-e2e.sh  (+7 more)
sdks/python/: .gitignore  LICENSE  README.md  errors.py  pyproject.toml
sdks/python/src/fuse/: __init__.py  _core.py  _transport.py  client.py  errors.py  types.py
sdks/python/src/fuse/_services/: __init__.py  apikeys.py  environments.py  events.py  hosts.py  snapshots.py
sdks/python/tests/: test_client.py  test_version.py
(+416 files in other folders)
