# packaging + tooling for the fuse python sdk.
# build/run everything with uv: `uv sync`, `uv run pytest`, `uv build`.

[project]
name = "folsom-fuse"
version = "0.8.0"
description = "Python SDK for the Fuse microVM control plane"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "andrewn6" }]
requires-python = ">=3.9"
keywords = ["fuse", "microvm", "firecracker", "sdk", "api-client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
]

[project.urls]
Homepage = "https://github.com/folsomintel/fuse/tree/main/sdks/python#readme"
Repository = "https://github.com/folsomintel/fuse.git"
Issues = "https://github.com/folsomintel/fuse/issues"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fuse"]

[tool.hatch.build.targets.sdist]
include = ["src/fuse", "README.md", "LICENSE"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]
line-length = 100
# pinned to the requires-python floor: pydantic evaluates annotations at
# runtime, where the `X | None` union syntax (UP045) fails on 3.9.
target-version = "py39"

[tool.ruff.lint]
# pyflakes, pycodestyle, isort, pyupgrade, bugbear
select = ["F", "E", "W", "I", "UP", "B"]
# UP045/UP007 want `X | None`, but pydantic evaluates model annotations at
# runtime and that union syntax errors on python 3.9 (our floor). keep Optional.
ignore = ["UP045", "UP007"]

[tool.mypy]
strict = true
files = ["src/fuse"]
